menambahkan z-index pada position fixed

--- a/style.css/style.css
+++ b/style.css/style.css
@@ -10,13 +10,13 @@
     border: 2px solid blue;
     border-radius: 50%;
     margin-top: 80px;
-
 }
 .navbar{
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 999;
 }
 .lead{
     font-family: 'Delicious Handrawn', cursive;
